Fixed invisible links in the file editor popup in the remixer.

--- a/rsrc/css/remixer.css
+++ b/rsrc/css/remixer.css
@@ -8,5 +8,6 @@
 }
 
 CommandLinkButton {
-  color: #ffffff;
+  color: #000000;
+  textRollOverColor: #4aabcf;
 }
